--- a/fronted/qianduan/index.html
+++ b/fronted/qianduan/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
+    <script src="https://g.alicdn.com/lib/lib-flexible/0.3.4/flexible.min.js"></script>
+    
     <title>Vite + Vue</title>
   </head>
   <body>
